--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "chalk": "^2.4.1",
-    "validator": "^13.9.0"
+    "validator": "^13.9.0",
+    "yargs": "^17.6.2"
   }
 }
